[package]
name = "terminus_vault"
version = "0.1.0"
authors = ["shady831213 <shady831213@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "terminus"
crate-type = ["rlib"]

[dependencies]
terminus-macros={ path = "macros" }
terminus-proc-macros={ path = "proc_macros" }
linkme = "0.1"

[workspace]
members = ["macros","proc_macros"]

