[package]
name = "terminus-vault"
version = "0.1.0"
authors = ["shady831213 <shady831213@126.com>"]
edition = "2018"
license = "MIT"
description = "Instruction and CSR utils for riscv simulator"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
terminus-macros={ path = "macros" }
terminus-proc-macros={ path = "proc_macros" }

[workspace]
members = ["macros","proc_macros"]

